src/core-crm/objects/VoiceCall/VoiceCall.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>