src/core-crm/objects/VoiceCall/fields/Call_Wrap_Up_Code__c.field-meta.xml
<CustomField>
    <fullName>Call_Wrap_Up_Code__c</fullName>
    <description>Captures the outcome of the voice call</description>
    <label>Call Wrap Up Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Enquiry</fullName>
            </value>
            <value>
                <fullName>Existing Enquiry</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Escalation Transfer</fullName>
            </value>
            <value>
                <fullName>Invalid Enquiry</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>