src/core-crm/objects/VoiceCall/fields/Issue_AI_generated__c.field-meta.xml
<CustomField>
    <fullName>Issue_AI_generated__c</fullName>
    <label>Issue AI generated</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>