src/core-crm/objects/VoiceCall/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact that is related to the voice call</description>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Voice Calls</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>