src/core-crm/objects/VoiceCall/fields/Resolution_AI_Generated__c.field-meta.xml
<CustomField>
    <fullName>Resolution_AI_Generated__c</fullName>
    <label>Resolution AI Generated</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>