src/core-crm/objects/VoiceCall/fields/Voice_Call_Issue__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call_Issue__c</fullName>
    <description>Summary of the issue</description>
    <label>Voice Call Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>