src/core-crm/objects/VoiceCall/fields/Voice_Call_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call_Resolution__c</fullName>
    <description>Summary of the resolution</description>
    <label>Voice Call Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>