src/core-crm/objects/VoiceCall/fields/Voice_Call_Summary__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call_Summary__c</fullName>
    <description>Summary of the voice call</description>
    <label>Voice Call Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>