src/core-crm/objects/VoiceCall/validationRules/Related_Lead_and_Contact_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Related_Lead_and_Contact_Validation</fullName>
    <active>true</active>
    <description>Lead and Contact cannot be linked to the Voice Call at the same time.</description>
    <errorConditionFormula>AND(
	NOT(ISBLANK(Related_Contact__c)), 
	NOT(ISBLANK(Related_Lead__c))
)</errorConditionFormula>
    <errorMessage>Lead and Contact cannot be linked to the Voice Call at the same time.</errorMessage>
</ValidationRule>